--- a/index.html
+++ b/index.html
@@ -1,50 +1,57 @@
 <!DOCTYPE html>
 <html lang='es'>
 
-<head>  
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible content=" IE=edge'>
-  <meta name="viewport" content='width=device-width, initial-scale=1.0, minimum-scale=1.0,maximum-scale=1.0'>
-  <title>Calculadora</title>
-  <link rel="stylesheet" href="/css/style.css">
-<link rel="shortcut icon" href="./images/code.ico" type="image/x-icon">
+<head>
+  <meta charset='UTF-8'>
+  <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+  <meta name='viewport' content='width=device-width, initial-scale=1.0, minimum-scale=1.0,maximum-scale=1.0'>
+  <title>Calculadora Básica</title>
+  <link rel='stylesheet' href='css/style.css'>
+  <link rel="shortcut icon" href="./images/code.ico" type="image/x-icon">
 </head>
+
 <body>
+
   <div class="contenedorGeneral">
     <div class="contenedorTitulo">CALCULADORA BÁSICA</div>
     <div class="contenedorPantalla">
-      <input class="pantalla" type="number">
+      <input class="pantalla" type="text" readonly>
     </div>
+
     <div class="contenedorTeclas">
+
       <div class="filas">
         <button class="btnTecla">7</button>
         <button class="btnTecla">8</button>
         <button class="btnTecla">9</button>
         <button class="btnTecla">/</button>
       </div>
+
       <div class="filas">
         <button class="btnTecla">4</button>
         <button class="btnTecla">5</button>
         <button class="btnTecla">6</button>
         <button class="btnTecla">X</button>
       </div>
+
       <div class="filas">
         <button class="btnTecla">1</button>
         <button class="btnTecla">2</button>
         <button class="btnTecla">3</button>
         <button class="btnTecla">-</button>
       </div>
+
       <div class="filas">
         <button class="btnTecla">0</button>
         <button class="btnTecla">CE</button>
         <button class="btnTecla">=</button>
         <button class="btnTecla">+</button>
       </div>
+
     </div>
   </div>
 
-  <script src="/js/script.js" type="module" defer></script>
-
+  <script src='./js/script.js' type="module" defer></script>
 </body>
 
 </html>
